# MedRAX

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_MODERNIZATION.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  MCP_SERVER_DESIGN.md  README.md  ROADMAP.md  pyproject.toml
docs/: MCP_TOOLS_MAPPING.md
medrax/mcp/: README.md  __init__.py  server.py
medrax/mcp/application/: __init__.py  services.py
medrax/mcp/domain/: __init__.py  entities.py  exceptions.py  protocols.py
medrax/mcp/infrastructure/: __init__.py  classifier.py  dicom.py  image_storage.py  segmentation.py  vqa.py
medrax/mcp/presentation/: __init__.py  prompts.py  resources.py  tools.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
tests/mcp/: __init__.py  test_mcp_server.py
