[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medrax"
version = "0.1.0"
description = "medical reasoning agent for chest x-ray"
authors = [
    {name = "Adibvafa Fallahpour", email = "adibvafa.fallahpour@mail.utoronto.ca"},
]
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    # HTTP & API
    "requests>=2.25.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    
    # Data Processing
    "numpy<2",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    
    # LangChain & Agents
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    
    # ML Frameworks
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.44.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "timm>=1.0.0",
    "einops>=0.8.0",
    
    # Medical Imaging
    "torchxrayvision>=0.0.37",
    "pydicom>=2.4.0",
    "scikit-image>=0.22.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "albumentations>=1.4.0",
    "diffusers>=0.27.0",
    
    # Visualization & UI
    "gradio>=5.0.0",
    "matplotlib>=3.8.0",
    
    # NLP & Tokenization
    "tokenizers>=0.19.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",
    
    # LLM APIs
    "openai>=1.30.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "backoff>=2.2.0",
    "shortuuid>=1.0.0",
    "markdown2[all]>=2.4.0",
    "protobuf>=4.25.0",
    "scikit-learn>=1.4.0",
    "datasets>=2.19.0",
    
    # MCP Server
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

dicom = [
    "gdcm>=1.1.0",
    "pylibjpeg>=2.0.0",
    "pylibjpeg-libjpeg>=2.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]

[project.scripts]
medrax = "main:main"
medrax-mcp = "medrax.mcp.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "THR", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "S104", "S105", "S106"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
